--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -16,6 +16,28 @@ body {
     color: $darkGrayBlue;
 }
 
+.main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1 {
+    font-size: 5em;
+    margin: 0 0 0.3em;
+    color: $snow;
+    text-shadow: $grayBlue 4px 5px;
+}
+
+h2 {
+    font-family: 'Fredoka One', cursive;
+    font-weight: 300;
+    margin-top: 0;
+    font-size: 2em;
+    color: $grayBlue;
+    text-shadow: $snow 2px 3px;
+}
+
 p {
     font-size: 1.2em;
     margin: 0.3em 0;
