--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -110,26 +110,6 @@ button {
     font-weight: 300;
 }
 
-.time-picker {
-    border-radius: 6px;
-    border: 3px solid $wildBlueYonder;
-    background: $snow;
-    padding: 1.5em;
-    margin-top: -1em;
-    margin-bottom: 2em;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.time-picker button {
-    padding: 0.5em;
-    font-size: 1em;
-    min-width: 15vw;
-    border: 3px solid $wildBlueYonder;
-    margin-top: 1em;
-}
-
 button:hover {
     border: 3px solid $lightGray;
     background: $snow;
@@ -142,6 +122,28 @@ button:hover {
 }
 
 // Timepicker styles
+
+.time-picker {
+    border-radius: 6px;
+    border: 3px solid $wildBlueYonder;
+    background: $snow;
+    padding: 1em;
+    margin-top: -1em;
+    margin-bottom: 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 75vw;
+    max-width: 500px;
+}
+
+.time-picker button {
+    padding: 0.5em;
+    font-size: 1em;
+    min-width: 15vw;
+    border: 3px solid $wildBlueYonder;
+    margin-top: 1em;
+}
 
 .timepicker-bubble circle {
     fill: $grayBlue;
@@ -160,8 +162,6 @@ button:hover {
     color: $darkerGreen;
 }
 
-.timepicker-bubble circle:hover,
-.timepicker-bubble text:hover {
+.timepicker-bubble:hover circle {
     fill: $darkerGreen;
-    // background: $darkerGreen;
 }
