--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -104,7 +104,7 @@ button {
 .manage-links {
     margin-top: 1em;
     width: 50%;
-    min-width: 300px;
+    max-width: 300px;
     display: flex;
     justify-content: space-between;
     font-weight: 300;
