Refactors scss w/ imports. Fixes TickTock css bug

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,193 +1,3 @@
-$lightGreen: #c5d86d;
-$darkerGreen: #a2b15a;
-$grayBlue: #8c86aa;
-$darkGrayBlue: #4d485d;
-$snow: #fcf7f8;
-$lightGray: #ced3dc;
-$wildBlueYonder: #aba9c3;
-$skyBlue: #6dc5d8;
-$night: #581845;
-// Palette source:
-// https://coolors.co/c5d86d-8c86aa-fcf7f8-ced3dc-aba9c3
-
-body {
-    font-family: 'Raleway', sans-serif;
-    display: flex;
-    justify-content: center;
-    margin: 0;
-    color: $darkGrayBlue;
-    font-size: 0.8em;
-}
-
-.main {
-    display: flex;
-    flex-direction: column;
-    padding: 1em;
-    align-items: center;
-    background: $lightGreen;
-    width: 100vw;
-    height: 100vh;
-    transition: 2s linear;
-}
-
-.dark {
-    background: $night;
-    transition: 2s linear;
-    color: $snow;
-
-    a {
-        color: $snow;
-        transition: 2s linear;
-    }
-
-    h2 {
-        color: $snow;
-        text-shadow: $grayBlue 2px 3px;
-    }
-}
-
-h1 {
-    font-size: 5em;
-    margin: 0 0 0.3em;
-    color: $snow;
-    text-shadow: $grayBlue 4px 5px;
-}
-
-h2 {
-    font-family: 'Fredoka One', cursive;
-    font-weight: 300;
-    margin-top: 0;
-    font-size: 2em;
-    color: $grayBlue;
-    text-shadow: $snow 2px 3px;
-}
-
-p {
-    font-size: 1.2em;
-    margin: 0.3em 0;
-    font-weight: 700;
-}
-
-a {
-    text-decoration: none;
-    background: none;
-    transition: 2s linear;
-}
-
-.btn {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1em;
-    margin-bottom: 1em;
-    width: 75vw;
-    max-width: 400px;
-    font-size: 1.2em;
-    border-radius: 6px;
-    font-weight: 700;
-}
-
-// .sleep-time {
-//     background: $night;
-//     color: $snow;
-
-//     a {
-//         color: $snow;
-//     }
-
-//     a:hover {
-//         color: $lightGreen;
-//     }
-// }
-
-// .awake-time {
-//     background: $skyBlue;
-
-//     a {
-//         color: $darkGrayBlue;
-//     }
-
-//     a:hover {
-//         color: $grayBlue;
-//     }
-// }
-
-button {
-    font-family: 'Fredoka One', cursive;
-    padding: 0.5em;
-    border: 3px solid $snow;
-    background: $lightGray;
-    color: $grayBlue;
-    min-width: 20vw;
-    border-radius: 6px;
-    font-size: 1.4em;
-    margin-bottom: 0.5em;
-}
-
-.manage-links {
-    margin-top: 1em;
-    width: 70%;
-    max-width: 400px;
-    display: flex;
-    justify-content: space-between;
-    font-weight: 300;
-    font-size: 0.9em;
-    background: none;
-    transition: 2s linear;
-}
-
-button:hover {
-    border: 3px solid $lightGray;
-    background: $snow;
-    transition: all 0.8s;
-    cursor: pointer;
-}
-
-.light {
-    font-weight: 100;
-}
-
-// Timepicker styles
-
-.time-picker {
-    border-radius: 6px;
-    border: 3px solid $wildBlueYonder;
-    background: $snow;
-    padding: 1em;
-    margin-top: -1em;
-    margin-bottom: 2em;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 75vw;
-    max-width: 500px;
-}
-
-.time-picker button {
-    padding: 0.5em;
-    font-size: 1em;
-    min-width: 15vw;
-    border: 3px solid $wildBlueYonder;
-    margin-top: 1em;
-}
-
-.timepicker-bubble circle {
-    fill: $grayBlue;
-}
-
-.timepicker-hand {
-    stroke: $grayBlue;
-}
-
-.timepicker-bubble.small.active circle,
-.timepicker-bubble.active circle {
-    fill: $darkGrayBlue;
-}
-
-.timepicker-info-digits.active {
-    color: $darkerGreen;
-}
-
-.timepicker-bubble:hover circle {
-    fill: $darkerGreen;
-}
+@import 'reset.scss';
+@import 'app.scss';
+@import 'time-picker.scss';
