--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,4 @@
-@import 'reset.scss';
-@import 'app.scss';
-@import 'time-picker.scss';
+@import 'reset';
+@import 'colours';
+@import 'app';
+@import 'time-picker';
